--- a/index.html
+++ b/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title>Mon premier site</title>
+  <meta charset="UTF-8">
+  <title>Connexion</title>
+  <style>
+    body {
+      background-color: #fafafa;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background: #fff;
+      border: 1px solid #dbdbdb;
+      padding: 40px;
+      width: 350px;
+      text-align: center;
+    }
+    .logo {
+      font-family: 'Brush Script MT', cursive;
+      font-size: 40px;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #dbdbdb;
+      border-radius: 3px;
+      background: #fafafa;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #3897f0;
+      border: none;
+      border-radius: 3px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    .separator {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      margin: 20px 0;
+    }
+    .separator::before, .separator::after {
+      content: "";
+      flex: 1;
+      border-bottom: 1px solid #dbdbdb;
+    }
+    .separator:not(:empty)::before {
+      margin-right: .75em;
+    }
+    .separator:not(:empty)::after {
+      margin-left: .75em;
+    }
+    .signup {
+      margin-top: 20px;
+      font-size: 14px;
+    }
+    .signup a {
+      color: #3897f0;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <h1>Bienvenue sur mon site 🚀</h1>
-    <p>Ceci est hébergé gratuitement avec GitHub Pages.</p>
+  <div class="container">
+    <div class="logo">MonApp</div>
+    <form>
+      <input type="text" placeholder="Nom d'utilisateur">
+      <input type="password" placeholder="Mot de passe">
+      <button type="submit">Connexion</button>
+    </form>
+    <div class="separator">OU</div>
+    <button style="background-color:#4267B2;">Se connecter avec Facebook</button>
+    <div class="signup">
+      Vous n'avez pas de compte ? <a href="#">Inscrivez-vous</a>
+    </div>
+  </div>
 </body>
 </html>
